--- a/HyperBackup.Core/HyperBackup.Core.csproj
+++ b/HyperBackup.Core/HyperBackup.Core.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,7 @@
     <Compile Include="Interfaces\IApplicationConfig.cs" />
     <Compile Include="Interfaces\IBackupStorage.cs" />
     <Compile Include="Interfaces\IHyperVCommands.cs" />
+    <Compile Include="Interfaces\ILog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
