--- a/HyperBackup/App.config
+++ b/HyperBackup/App.config
@@ -5,5 +5,8 @@
   </startup>
   <appSettings>
     <add key="BackupPath" value="C:\Temp\HyperBackup" />
+    <add key="LogToConsole" value="true" />
+    <add key="FileLogLevel" value="Trace"/>
+    <add key="ConsoleLogLevel" value="Info"/>
   </appSettings>
 </configuration>
